--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
     .video__row {
         display: flex;
         flex-direction: column;
+    }
 }
 
 @media screen and (max-width: 360px) {
